2nd attempt to fix main image on ios safari

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -162,7 +162,6 @@ ul li a:hover{
 		background-position: 32% 14%;
 		height: 485px;
 		max-width: 100%;
-
 	}
 	#product {
 		height: 100%;
@@ -194,6 +193,17 @@ ul li a:hover{
 		padding-top: 90px;
 		font-size: 3em;
 		padding-left: 74px;
+	}
+	#home {
+		/*resize background image for mobile*/
+		-webkit-background-size: 205%;
+		-moz-background-size: 205%;
+		-o-background-size: 205%;
+		background-size: 205%;
+		-webkit-background-position: 32% 14%;
+		background-position: 32% 14%;
+		height: 485px;
+		max-width: 100%;
 	}
 	#main-title {
 		padding-top: 263px;
